# weather-bot-new

backend/: .gitignore  main.py  pyproject.toml  requirements.txt
frontend-latest/: next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend-latest/src/app/: globals.css  layout.tsx  page.tsx
frontend-latest/src/app/components/: AirQualityCard.tsx  ForecastCard.tsx  SearchBar.tsx  WeatherCard.tsx
frontend-latest/src/types/: weather.ts
frontend-latest/src/utils/: api.ts  weatherUtils.ts
