[project]
name = "weatherwise-agent"
version = "0.1.0"
description = "AI Weather Assistant using FastAPI, Gemini, and OpenWeatherMap"
authors = ["Your Name <you@example.com>"]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "openai",
    "requests",
    "python-dotenv"
]
requires-python = ">=3.9"


